fix: light and dark mode colors

--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -1,10 +1,10 @@
 .menu {
   --gap: 30px;
 
-  background-color: var(--color-grey);
+  background-color: var(--color-secondary-bg);
 
   &__container {
-    background-color: var(--color-grey);
+    background-color: var(--color-secondary-bg);
     position: relative;
     bottom: 40px;
     padding: 30px 15px;
