--- a/src/styles/blocks/restaurants.pcss
+++ b/src/styles/blocks/restaurants.pcss
@@ -1,6 +1,6 @@
 #restaurants {
   padding: 30px 20px 60px;
-  background-color: var(--color-grey);
+  background-color: var(--color-secondary-bg);
 
   @media (min-width: 768px) {
     padding: 30px 40px 60px;
@@ -46,6 +46,7 @@
   border-radius: 14px;
   box-shadow: 0 4px 8px #00000020;
   color: var(--color-fg);
+  background-color: var(--color-bg);
   transition: all 100ms;
 
   @media (min-width: 768px) {
@@ -113,5 +114,5 @@
 }
 
 .dark .resto-card {
-  background-color: var(--darkpurplegrey);
+  background-color: var(--purplegrey);
 }
