--- a/src/styles/components/cta.pcss
+++ b/src/styles/components/cta.pcss
@@ -1,7 +1,7 @@
 .cta {
   z-index: 2;
   padding: 36px 25px;
-  background-color: var(--color-grey);
+  background-color: var(--color-secondary-bg);
   display: flex;
   justify-content: center;
 
