--- a/src/styles/components/footer.pcss
+++ b/src/styles/components/footer.pcss
@@ -73,5 +73,5 @@ footer {
 }
 
 .dark footer {
-  background-color: var(--darkpurplegrey);
+  background-color: var(--purplegrey);
 }
