--- a/src/styles/components/location.pcss
+++ b/src/styles/components/location.pcss
@@ -4,7 +4,7 @@
   justify-content: center;
   position: relative;
   height: 50px;
-  background-color: var(--color-grey);
+  background-color: var(--lightgrey);
 
   p {
     z-index: 2;
@@ -40,5 +40,13 @@
       border-radius: 0 0 20px 20px;
       opacity: 0.5;
     } */
+  }
+}
+
+.dark .location {
+  background-color: var(--darkpurple);
+
+  @media (min-width: 768px) {
+    background-color: transparent;
   }
 }
