--- a/src/styles/components/navbar.pcss
+++ b/src/styles/components/navbar.pcss
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 3px 3px #0000002c;
-  background-color: var(--color-grey);
+  background-color: var(--color-bg);
 
   h1 {
     margin-top: 5px;
