--- a/src/styles/utilities/normalize.pcss
+++ b/src/styles/utilities/normalize.pcss
@@ -20,7 +20,7 @@ body {
   flex-direction: column;
   margin: 0 auto;
   max-width: 1630px;
-  background-color: var(--color-grey);
+  background-color: var(--color-secondary-bg);
 
   &.loading-anim {
     nav,
